clusters/calcifer-cloud/apps/edge-test/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-edge-test
  namespace: edge-test
  labels:
    kubernetes.io/service-name: home-edge-test
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - 172.31.255.2
    conditions:
      ready: true
