clusters/calcifer-cloud/apps/edge-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-edge-test
  namespace: edge-test
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
