clusters/calcifer-cloud/apps/edge-test/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: edge-test-auth
  namespace: edge-test
spec:
  basicAuth:
    secret: edge-test-auth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: edge-test
  namespace: edge-test
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`edge-test.calcifer.tech`)
      middlewares:
        - name: edge-test-auth
      services:
        - name: home-edge-test
          port: 443
          scheme: https
          serversTransport: home-edge-test
          passHostHeader: true
  tls:
    secretName: edge-test-cloud-tls
